# finance

./: .gitignore  ARIMA.ipynb  README.md  VaR.ipynb  finance.sln  mod1.py  pillar3.py  portfolio.ipynb
finance/: analyticalFormulas.h  finance.cpp  finance.vcxproj  finance.vcxproj.filters  main.cpp  random1.cpp  simpleMC1.cpp
finance_cpp/: CMakeLists.txt  finance_cpp.sln
finance_cpp/finance_cpp/: CMakeLists.txt  analyticalFormulas.cpp  finance_cpp.vcxproj  finance_cpp.vcxproj.filters  gaussNumerical.cpp  gaussNumerical.h  main.cpp  math_func.h  motion.h  print_func.h  random1.h  random_generator.cpp  random_generator.h  simpleMC1.h
finance_cpp_old/: main.cpp  math_func.h  motion.h  random_generator.cpp  tests.txt
python/: CAPM.ipynb  VaR.ipynb  mod1.py  portfolio.ipynb  regression.ipynb  requirement.txt  requirements.txt  test_mod1.ipynb  var1.ipynb
